--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,9 @@
 	<description>Demo project for Spring Boot</description>
 	<packaging>jar</packaging>
 	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+  <sonar.organization>pkabakole11</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
 <dependencies>
 		<dependency>
